# mfnet

./: .coveragerc  .pre-commit-config.yaml  .python-version  README.md  layer_usage.py  main.py  pyproject.toml  test_named_tuple_time.py
mfnet/: layer.py  loss.py
src/mfnet/: __init__.py  dataloader.py  layer.py  loss.py  nn.py  optimizer.py  tensor.py  train.py  trainutils.py
tests/: conftest.py  test_MSELoss.py  test_dataloader.py  test_layer.py  test_layer_activation_classes.py  test_layer_activation_functions.py  test_loss.py  test_nn.py  test_optimizer.py  test_tensor.py  test_train.py  test_train_utils.py  test_trainutils.py
tests/test_layer/: test_activation.py  test_layer_activation.py  test_layer_activation_functions.py  test_layer_base.py  test_layer_linear.py  test_linear.py
