[tool.poetry]
name = "mfnet"
version = "0.1.0"
description = "Deep Learning package."
authors = ["Francesco Marchisotti <francesco.marchisotti@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
